fix image width and align right

--- a/styles/main.css
+++ b/styles/main.css
@@ -222,10 +222,7 @@ div.tarif {
     justify-content: space-evenly;
   }
 
-  #pageHeader img {
-    width: 100%;
-    height: 229px;
-  }
+
 
   #pageHeader div {
     display: block;
@@ -271,6 +268,9 @@ div.tarif {
     width: 25%;
   }
 
+  #mainArticle img {
+    width: 327px;
+  }
   img.img-right {
     float: right;
     margin-top: 0 !important;
